[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/danielcaz_lambda_utils"]

[project]
name = "danielcaz_lambda_utils"
version = "0.0.2"
authors = [
  { name="Daniel Cazarez", email="cazarez.jorge.prog2019@gmail.com" },
]
description = "Miscellaneous utilities for AWS Lambda functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DanielCaz/lambda-utils"
Issues = "https://github.com/DanielCaz/lambda-utils/issues"